welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:21: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:27: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:37: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:47: error: Unit does not take parameters
		dogHouse();		
                        ^